--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -22,7 +22,8 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.24.5'
+          # Use a Flutter SDK that ships with Dart >= 3.8 to satisfy pubspec.yaml
+          flutter-version: '3.38.5'
           channel: 'stable'
           cache: true
 
