--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -1,4 +1,4 @@
-name: Android Release APK
+name: Android Release App Bundle
 
 on:
   workflow_dispatch:
@@ -6,7 +6,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build-apk:
+  build-appbundle:
     runs-on: ubuntu-latest
 
     steps:
@@ -22,7 +22,6 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          # Use a Flutter SDK that ships with Dart >= 3.8 to satisfy pubspec.yaml
           flutter-version: '3.38.5'
           channel: 'stable'
           cache: true
@@ -34,11 +33,11 @@ jobs:
       # - name: Flutter analyze
       #   run: flutter analyze
 
-      - name: Build release APK
-        run: flutter build apk --release
+      - name: Build release App Bundle
+        run: flutter build appbundle --release
 
-      - name: Upload APK artifact
+      - name: Upload App Bundle artifact
         uses: actions/upload-artifact@v4
         with:
-          name: app-release-apk
-          path: build/app/outputs/flutter-apk/app-release.apk
+          name: app-release-aab
+          path: build/app/outputs/bundle/release/app-release.aab
